--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, World!</title>
-    <img scr="https://drive.google.com/uc?export=view&id=1W482-JrHkm4nEvOEjABxJAmPs5DjuDRw" alt="hello">
+    <iframe scr="https://drive.google.com/file/d/1W482-JrHkm4nEvOEjABxJAmPs5DjuDRw/preview" allow="autoplay"></iframe>
     
 </head>
 <body>
