--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, World!123</title>
     <iframe scr="https://drive.google.com/file/d/1W482-JrHkm4nEvOEjABxJAmPs5DjuDRw/preview" allow="autoplay"></iframe>
-    <ig src="https://drive.google.com/uc?id=1W482-JrHkm4nEvOEjABxJAmPs5DjuDRw">
+    <img src="https://drive.google.com/uc?id=1W482-JrHkm4nEvOEjABxJAmPs5DjuDRw">
     
 </head>
 <body>
