--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NOAA MD</title>
 </head>
 <body>
-    <label for="mdNumber">Enter MD Number:</label>
+    <label for="mdNumber">SPC Meso. Discussions: Enter Number:</label>
     <input type="text" id="mdNumber" name="mdNumber" maxlength="4" oninput="formatMDNumber(this)">
     <button onclick="goToMD()">Go</button>
 
@@ -21,6 +21,8 @@
         function goToMD() {
             var mdNumber = document.getElementById("mdNumber").value;
             if (mdNumber !== "") {
+                // Convert to 4-digit format
+                mdNumber = mdNumber.padStart(4, '0');
                 window.location.href = "meso_disc/md" + mdNumber + ".html";
             }
         }
