--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <script>
         function formatMDNumber(input) {
             // Remove any non-numeric characters
-            input.value = input.value.replace(/\D/g,'');
+            var numericInput = input.value.replace(/\D/g,'');
             // Pad with leading zeros to make it 4 digits
-            input.value = input.value.padStart(4, '0');
+            var paddedInput = numericInput.padStart(4, '0');
+            // Update input value with the padded input
+            input.value = paddedInput;
         }
 
         function goToMD() {
             var mdNumber = document.getElementById("mdNumber").value;
             if (mdNumber !== "") {
-                // Convert to 4-digit format
-                mdNumber = mdNumber.padStart(4, '0');
                 window.location.href = "meso_disc/md" + mdNumber + ".html";
             }
         }
 
-        function handleEnter(event) {
+        function handleKeyPress(event) {
             if (event.key === "Enter") {
                 goToMD();
             }
