--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html>
+    <head></head>
     <style>
         body {
             margin: 0;
         }
     </style>
-</head>
 <body>
-    <canvas></canvas>>
-    <script src="index.js" ></script>
+    <canvas></canvas>
+    <script src="./index.js"></script>
 </body>
 </html>
