--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en-us"><script src="https://pygame-web.github.io/archives/0.9/pythons.js" type=module id=site data-LINES=57 data-CONSOLE=25 data-python=python3.12 data-os=vtx,fs,snd,gui async defer>#<!--
 
 print("""
-Loading pygame_flappybird from pygame_flappybird.apk
+Loading graphicminute from graphicminute.apk
     Pygbag Version : 0.9.1
     Template Version : 0.9.0
     Python  : 3.12
     CDN URL : https://pygame-web.github.io/archives/0.9/
     Screen  : 1280x720
-    Title   : pygame_flappybird
-    Folder  : pygame_flappybird
+    Title   : graphicminute
+    Folder  : graphicminute
     Authors : pgw
     SPDX-License-Identifier: cookiecutter.spdx
 
@@ -84,12 +84,12 @@ async def custom_site():
 
 
 
-    apk = "pygame_flappybird.apk"
+    apk = "graphicminute.apk"
 
-    bundle = "pygame_flappybird"
+    bundle = "graphicminute"
 
     # the C or js loader could do that but be explicit.
-    appdir = Path(f"/data/data/{bundle}") # /data/data/pygame_flappybird
+    appdir = Path(f"/data/data/{bundle}") # /data/data/graphicminute
     appdir.mkdir()
 
 
@@ -239,7 +239,7 @@ config = {
     user_canvas_managed : 0,
     ume_block : 1,
     can_close : 0,
-    archive : "pygame_flappybird",
+    archive : "graphicminute",
     gui_debug : 3,
     cdn : "https://pygame-web.github.io/archives/0.9/",
     autorun : 0,
@@ -248,7 +248,7 @@ config = {
 
 </script>
 
-    <title>pygame_flappybird</title>
+    <title>graphicminute</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
